# hwstuff

./: .gitignore  CMakeLists.txt  WORKSPACE  pyproject.toml  todo.org
DDCA2e_HDL/: 0430-divideby3FSM.sv.bak  0439-testbench_example3.sv  0439-testbench_example3.vhd  0501-adder.vhd  0502-subtractor.vhd  0503-comparator.sv  0503-comparator.vhd  0504-multiplier.vhd  0505-counter.sv  0505-counter.vhd  0506-shiftreg.sv  0506-shiftreg.vhd  0507-ram.sv  0507-ram.vhd  0508-ROM.sv  0508-ROM.vhd  07-mipsmulti.sv  07-mipsmulti.vhd  07-mipssingle.sv  07-mipssingle.vhd  0706_regfile.sv  Makefile
riscv/: BUILD  CMakeLists.txt  alu.sv  alu_test.cc  controller.sv  core.sv  decoder.sv  fetchstore.sv  hart.sv  membus_consts.sv  memory.sv  opcodes.sv  regfile.sv
riscv/test/: alu_test.cc  fetchstore_test.cc  hart_test.cc  memory_test.cc  opcodes.h
